--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     display:flex;
     flex-direction: column;
     width: 80%;
+    
    
 }
 body{
@@ -37,11 +38,13 @@ body{
     display:flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    margin: 0 auto;
 }
 .header{
     margin: 0 auto; 
-    padding-radius: 10px; 
-    /* position: absolute; */
+    border-radius: 10px; 
+    width: 350px;
 }
 
 .profile{
@@ -51,13 +54,10 @@ body{
     justify-content: space-between;
     background-color:  hsl(246, 80%, 60%);
     padding: 25px;
-    border-radius: 10px;
-    /* position: absolute */
-    
+    border-radius: 10px;    
 }
 
 .profile > img{
-    /* transform: scale(0.3); */
     border: 2.5px solid white;
     border-radius: 50%;
     width: 20%;
@@ -72,6 +72,10 @@ body{
     color:  hsl(236, 100%, 87%);
 }
 
+h1{
+    font-size: 35px;
+}
+
 .opt{
     display: flex;
     background-color:  hsl(235, 46%, 20%);
@@ -81,8 +85,163 @@ body{
     z-index: -1;
     position: relative;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
 }
+
 .container{
-    width: 80%;
+    margin: 0 auto; 
+    
+}
+
+.cont{
+    width: 350px; 
+}
+
+.work{
+    margin-top: 30px;
+    background-color: hsl(15, 100%, 70%);
+    border-radius: 10px; 
+    height: 70px;
+}
+
+.flex,
+.flex_{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex h2{
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+.flex p{
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+.flex_ p:first-child {
+    color: white;
+    font-size: 35px;
+    margin: 0;
+    padding: 0;
+}
+
+.flex_ p:last-child {
+    color: white;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+.play{
+    margin-top: 20px;
+    background-color: hsl(195, 74%, 62%);
+    border-radius: 10px; 
+    height: 70px;
+}
+
+
+.study{
+    margin-top: 20px;
+    background-color: hsl(348, 100%, 68%);
+    border-radius: 10px; 
+    height: 70px;
+}
+
+
+.exercise{ 
+    margin-top: 20px;
+    background-color: hsl(145, 58%, 55%);
+    border-radius: 10px; 
+    height: 70px;
+}
+
+
+.social{
+    margin-top: 20px;
+    background-color: hsl(264, 64%, 52%);
+    border-radius: 10px; 
+    height: 70px;
+   
+}
+
+
+.self_care{
+    margin-top: 20px;
+    background-color: hsl(43, 84%, 65%);
+    border-radius: 10px; 
+    height: 70px;   
+}
+
+.icon{
+    z-index: 1;
+    right: -10px;
+    top: -10px;
+    width: inherit;
+    position: relative;
+
+}
+
+.background{
+    background-color:  hsl(235, 46%, 20%);
+    padding: 20px;
+    margin-top: -30px;
+    border-radius: 10px; 
+    position: relative;  
+    z-index: 2;   
+}
+
+@media (min-width: 768px){
+
+    .wrapper{
+        width: 70%;
+        flex-direction: row;
+        gap: 30px;
+
+    }
+    .header{ 
+        min-width: 350px;
+    }
+
+    .profile{
+        flex-direction: column;
+        align-items: flex-start
+    }
+
+    .profile > img{
+        border: 2.5px solid white;
+        border-radius: 50%;
+        width: 30%;
+       
+    }
+
+    .name{
+        margin: 40px 0;
+    }
+    .container{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    .opt{
+        flex-direction: column;
+        padding: 20px;
+    }
+
+    .flex_{
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 20px 0;
+    }
+
+    .cont > div{
+        margin: 0;
+    }
+
+
 }
