--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
 .header{
     margin: 0 auto; 
     border-radius: 10px; 
-    width: 350px;
+    width: 300px;
 }
 
 .profile{
@@ -97,7 +97,7 @@ h1{
 }
 
 .cont{
-    width: 350px; 
+    width: 300px; 
 }
 
 .work{
@@ -240,6 +240,10 @@ h1{
         flex-direction: column;
         align-items: flex-start;
         margin: 20px 0;
+    }
+
+    .cont{
+        width: 350px;
     }
 
     .cont > div{
